[package]
name = "cacophony"
version = "0.1.0"
authors = ["Salamander"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.7"
pollster = "0.3.0"
wasm-bindgen = "0.2.87"
wgpu = {version = "0.17.1", features = ["webgl"]}
winit = "0.28.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement"
]
