[package]
name = "cacophony"
version = "0.1.0"
authors = ["Salamander"]
edition = "2018"

[dependencies]
bytemuck = { "version" = "1.14.0", "features" = ["derive"]}
cgmath = "0.18.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
delaunator = "1.0.2"
log = "0.4.20"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wgpu = {version = "0.17.1", features = ["webgl"]}
winit = "0.28.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement",
    "EventTarget",
    "KeyboardEvent",
    "Event",
    "CanvasRenderingContext2d"
]
